	* Breaking API so that we now hide internal data structures.

2008-02-06 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* Rewrote Peter Hartley's patch to include a new extra header field in
	FileInfo.

*******************************************************************************
Version 1.6.16
*******************************************************************************

2012-02-24 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	SF Bug Tracker id 3489999 - UpnpString leaks in genaSubscribe()

	Submitted: Yoichi NAKAYAMA ( yoichi ) - 2012-02-21 07:06:35 PST

	In genaSubscribe() (defined in upnp/src/gena/gena_ctrlpt.c),
	ActualSID and EventURL will not be freed if ScheduleGenaAutoRenew
	returns UPNP_E_SUCCESS.

	This fixes the an issue introduced by the previous fix.

2012-02-23 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	SF Bug Tracker id 3489999 - UpnpString leaks in genaSubscribe()

	Submitted: Yoichi NAKAYAMA ( yoichi ) - 2012-02-21 07:06:35 PST

	In genaSubscribe() (defined in upnp/src/gena/gena_ctrlpt.c),
	ActualSID and EventURL will not be freed if ScheduleGenaAutoRenew
	returns UPNP_E_SUCCESS.

	This fixes the original issue.

2012-02-23 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	SF Bug Tracker: UpnpString leaks in genaSubscribe()

	In genaSubscribe() (defined in upnp/src/gena/gena_ctrlpt.c),
	ActualSID and EventURL will not be freed if ScheduleGenaAutoRenew
	returns UPNP_E_SUCCESS.

2012-02-23 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Revert cb89781a55466703763c1b0ee67094eb401ddfe9 as suggested by
	Fabrice Fontaine.

2012-02-07 Edwin Stearns <edwin(at)vtilt.com>

	Attached is a patch that resolved an issue I found with a server that
	gave its device description URI without a trailing slash (e.g.
	`http://127.0.0.1:5555`).

2012-01-04 Fabrice Fontaine <fabrice.fontaine(at)orange.com>

	Bug fix for IPv4-mapped IPv6 addresses.
